MDL-57066 theme_boost: Fix course section move icon alignment

--- a/theme/boost/scss/moodle/course.scss
+++ b/theme/boost/scss/moodle/course.scss
@@ -329,6 +329,11 @@
             margin: 0;
             padding: 0;
         }
+
+        .left {
+            padding-top: 0;
+            text-align: right;
+        }
     }
 }
 
